--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,9 +22,9 @@
             <button type="submit" class="nes-btn is-primary">Submit</button>
         </form>
 
-        <section class="message -right border">
-            <i class="nes-octocat animate my-octocat in-register"></i>
-            <p class="nes-balloon from-right nes-pointer my-balloon in-register <%= style %> ">
+        <section class="message -right">
+            <i class="nes-octocat animate my-octocat is-right"></i>
+            <p class="nes-balloon from-right nes-pointer my-balloon is-right <%= style %> ">
                 <%= message %>
             </p>
         </section>
