--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -20,7 +20,14 @@ body {
     background-color: hsla(0, 0%, 100%, 0) !important;
 }
 
-.my-octocat.in-register {
+.message {
+    position: fixed;
+    bottom: 10%;
+    right: 5%;
+    z-index: 99;
+}
+
+.my-octocat.is-right {
     float: right;
     position: relative;
     top: 4em;
@@ -30,7 +37,7 @@ body {
     z-index: 1;
 }
 
-.my-balloon.in-register {
+.my-balloon.is-right {
     float: right;
     position: relative;
     top: 0em;
